--- a/docs/release_notes.txt
+++ b/docs/release_notes.txt
@@ -1,5 +1,5 @@
 =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
-    Litestep 0.24.7
+    LiteStep 0.24.7
     Release Notes
     
     Copyright (c) 2005 - Litestep Development Team
@@ -16,17 +16,17 @@ Contents:
 
 -- ABOUT -----------------------------------------------------------------------
 
- Litestep is a replacement shell for the standard Windows(tm) Explorer shell.
+ LiteStep is a replacement shell for the standard Windows(tm) Explorer shell.
 
  The Explorer shell provides the familiar desktop environment, start menu, and
- task bar.  The developers of Litestep (and thousands of users) have found the
+ task bar.  The developers of LiteStep (and thousands of users) have found the
  Explorer shell to be static, cumbersome and otherwise too ugly to use.  Thus
- exists Litestep.
+ exists LiteStep.
 
- Litestep replaces that environment in just about any way that you might find
- useful (and eye catching).  Litestep provides the way to make your desktop
+ LiteStep replaces that environment in just about any way that you might find
+ useful (and eye catching).  LiteStep provides the way to make your desktop
  interface unique, enjoyable and dynamic.  The desktop environments that the
- Litestep users create range from a blank screen full of functionality based on
+ LiteStep users create range from a blank screen full of functionality based on
  hotkeys and hotspots, to eye pleasing morphing menus and sliding toolbars
  filled with graphical and informative displays of system status, the latest
  news headlines and the current weather report.
@@ -38,29 +38,29 @@ Contents:
  http://www.lsdev.org/
  ---------------------
  - The Litestep Development Team's portal.
- - Contains all official Litestep releases.
+ - Contains all official LiteStep releases.
  - Litestep Developer moderated forums.
 
  http://www.litestep.net/
  ------------------------
- - The largest Litestep theme and community website.
+ - The largest LiteStep theme and community website.
  - Screenshot and theme repository.
  - Module downloads.
- - User forums for everything Litestep related.
+ - User forums for everything LiteStep related.
 
  http://wiki.litestep.com/
  -------------------------
- - A new Litestep wiki with content based largely around the community driven
+ - A LiteStep wiki with content based largely around the community driven
    Open Theme Standard, facilitating a common framework for themers to create
-   themes easily accessible to many users.
+   environments easily accessible to many users.
    (See also: http://o-t-s.sourceforge.net/)
 
 -- SYSTEM REQUIREMENTS ---------------------------------------------------------
  
- Litestep requires only that you are running a 32bit version of Windows:
+ LiteStep requires only that you are running a 32bit version of Windows:
  Win95, Win98(se), WinME, Win2K, WinXP
 
- Litestep is designed to consume less resources than the Explorer shell it
+ LiteStep is designed to consume less resources than the Explorer shell it
  replaces, so there are no system requirements above and beyond that which is
  needed for a normal Windows system.
 
@@ -75,42 +75,184 @@ Contents:
  NOTE:
  -----
  You are about to install a replacement shell for Windows.  A shell is not a
- normal application, and runs as a special system process.  Replacing the shell
+ normal application; it runs as a special system process.  Replacing the shell
  is not a supported procedure by Microsoft, and as such, it is possible  that if
- you do something wrong, you may end up with a non functional desktop or your
- system may display an error message asking you to re-install Windows.  Do NOT
- panic, a very simple solution will put you back to where you need to be, so you
- can fix whatever mistake you made, and try again.  Please read the
- documentation on this topic that came with your Litestep distribution, or
+ you do something wrong, you may end up with a non functional desktop and/ or
+ your system may display an error message asking you to re-install Windows.  Do
+ NOT panic, a very simple solution will put you back to where you need to be, so
+ that you can fix whatever mistake you made, and try again.  Please read the
+ documentation on this topic that came with your LiteStep distribution, or
  review the "Manual Install" steps below.
 
- Now that you are ready to get going, there are several methods to start using
- Litestep.
+ Now that you are ready to get going, there are a couple of methods to start
+ using LiteStep.
 
  (see also: http://wiki.litestep.com/LiteStep:Installation)
+ 
+ You MUST have administrative access to install Litestep.
 
- A. Litestep Distributions (Recommended and automated)
+ A) LiteStep Distributions (Recommended and automated)
  -----------------------------------------------------
 
- The recommended way is to install one of the community driven Litestep
- distributions.  Typically these distributions come with a friendly step by step
- installation wizard that will set your system up using a default desktop
- environment and theme.  Currently we recommend using the very successful
- distribution by Omar which utilizes the Open Theme Standard 2 (OTS2).
+ The recommended way to start with LiteStep is to install one of the community
+ driven LiteStep distributions.  Typically these distributions come with a
+ friendly step by step installation wizard that will set your system up using a
+ default desktop environment and theme.  Currently we recommend using the very
+ successful distribution by Omar which uses the Open Theme Standard 2 (OTS2).
 
- Please read the installation guide on his website before downloading:
+ Please read the installation guide on his website before installing:
 
  http://beyondconvention.net/ohussain/lsinstaller/
 
- B. Litestep From Scratch (Manual install and configuration)
+ B) LiteStep From Scratch (Manual install and configuration)
  -----------------------------------------------------------
+
+ STOP: If you are NOT highly familiar with editing the registry or reading
+       lots of documentation and editing text configuration files, then this
+       procedure is NOT for you!  Please use a LiteStep Distribution. Thank you.
 
  For the do-it-yourself type, please thoroughly read the following before
  proceeding.  It will save you a lot of headache.  I promise.
  
-  1. 
+ Create a folder for LiteStep.  Generally this is done at "C:\LiteStep".
 
-  2. 
+ Extract the contents of "LS-0.24.7u.zip" to this folder.  Once the contents are
+ extracted, there should be a file located at "C:\LiteStep\litestep.exe".
+ 
+ Create a text file named "step.rc" and place it in the same folder as
+ "litestep.exe".  Using the previous example location, this empty text file
+ should now be at "C:\LiteStep\step.rc".
+ 
+ Next, consult the section "HELP" to configure LiteStep via the step.rc text
+ file.  Do NOT set LiteStep as your shell until you have configured it,
+ otherwise you will be left with a disfunctional (yet recoverable) system.
+ 
+ To install LiteStep as your shell, follow these instructions:
+ 
+  1. Win9x/ME
+
+    - Using a text editor (i.e. Notepad) open the Windows System file named
+      "system.ini". This file's location is normally "C:\Windows\system.ini"
+
+    - Locate the line that begins with "shell=".  This line is located in the
+      "[boot]" section.  Typically the full line looks like "shell=explorer.exe"
+      (without quotation marks).  Comment out this line (which disables it) by
+      placing a semi-colon at the begining of the line.  The line should now
+      look like ";shell=explorer.exe" (without the quotation marks).
+      
+    - Create a new "shell=" line in the same location as the one removed. This
+      new line should contain the location of "litestep.exe". For example it
+      might look like "shell=C:\LiteStep\litestep.exe" (without the quotation
+      marks).
+
+    - Reboot your system.
+    
+    - README! When you reboot, if you get the error:
+
+      "CANNOT FIND <shell file name> PLEASE REINSTALL WINDOWS"
+
+      Do NOT reinstall windows!  Just simply follow the instructions below to
+      put your shell back to the default.
+
+    - Boot into DOS (press F8 before Windows starts, or use a DOS boot disk).
+      Issue the command "edit C:\Windows\system.ini" adjusting for the location
+      of your system.ini file.  Delete the new line you created in the previous
+      steps, and uncomment the line you previously disabled. Do this by deleting
+      the semicolon at the start of the line.  You should now have one line that
+      starts with "shell=" in the "[boot]" section of the "system.ini" file,
+      "shell=explorer.exe".  Save the file and reboot your system.
+
+  2. Win2K/XP
+  
+    - Note: Please see the LiteStep Wiki for a "Group Policy" installation.
+
+    - If you are NOT an administrator, you will most likely NOT be able to set
+      LiteStep as you shell.  The only exception to this is if your system
+      Administrator has enabled "per user" shells.  This is highly unlikely.
+
+      While it is "possible" to run LiteStep at the same time as the default
+      Explorer shell, it is discouraged and completely unsupported. Good luck!
+
+    - Open "regedit" or a similiar utility.
+
+    - To ENABLE "per user" shells:
+      * Locate the following key:
+
+        HKEY_LOCAL_MACHINE\SOFTWARE\Microsoft\Windows NT\CurrentVersion
+          \IniFileMapping\system.ini\boot
+
+      * Change the string value named "Shell" to:
+
+        USR:Software\Microsoft\Windows NT\CurrentVersion\Winlogon
+
+    - To DISABLE "per user" shells:
+      * Locate the following key:
+
+        HKEY_LOCAL_MACHINE\SOFTWARE\Microsoft\Windows NT\CurrentVersion
+          \IniFileMapping\system.ini\boot
+
+      * Change the string value named "Shell" to:
+
+        SYS:Microsoft\Windows NT\CurrentVersion\Winlogon
+
+    - To set the DEFAULT system shell:
+      * Locate the following key:
+
+        HKEY_LOCAL_MACHINE\Software\Microsoft\Windows NT\CurrentVersion\Winlogon
+
+      * Change the string value named "Shell" to the location of the file you
+        want to use as your default system shell.
+
+        For LiteStep use (adjust path as necessary):
+        
+          C:\LiteStep\litestep.exe
+        
+        For Explorer use (do not specify a path):
+        
+          Explorer.exe
+        
+    - To set the shell for the currently logged in user:
+      * Locate the following key:
+
+        HKEY_CURRENT_USER\Software\Microsoft\Windows NT\CurrentVersion\Winlogon
+
+      * Change the string value named "Shell" to the location of the file you
+        want to use as your current user shell.
+
+        For LiteStep use (adjust path as necessary):
+
+          C:\LiteStep\litestep.exe
+
+        For Explorer use (do not specify a path):
+
+          Explorer.exe
+
+    - To use any shell besides Explorer, the following keys MUST be changed.
+      If you do not configure these keys, you will not be able to use the
+      Explorer File Manager.
+
+      * Locate the following key:
+
+        HKEY_CURRENT_USER\Software\Microsoft\Windows\CurrentVersion\Explorer
+
+      * Change (create) the DWORD value named "DesktopProcess" to a value of 1.
+
+      * Locate the following key:
+      
+        HKEY_CURRENT_USER\Software\Microsoft\Windows\CurrentVersion
+          \Explorer\Advanced
+
+      * Change (create) the DWORD value named "DesktopProcess" to a value of 1.
+
+    - If you changed the "per user" shell setting, you MUST reboot.  Otherwise
+      simply log off.  When you return to the desktop, LiteStep will be running
+      as your shell if you managed to configure everything correctly.
+
+    - If you end up with a blank or otherwise non-functional desktop.  Press
+      CTRL+SHIFT+ESC key combination.  The Windows Task Manager will open. Use
+      the File menu to Run a New Task.  Launch your registry editor and use the
+      previous instructions to set your system shell back to the default
+      Explorer shell.
 
 -- USAGE (HELP) ----------------------------------------------------------------
 
@@ -120,14 +262,19 @@ Contents:
 
  The Litestep Development Team:
 
- Litestep 0.24.7
- ---------------
- - Simon (ilmcuts)
+ The Current Team:
+ -----------------
  - Chris Rempel (jugg)
- - Kevin Schaffer (Maduin)
- - Bobby G Vineyard (Message)
- - Josh (RabidCow)
  - Erik Christiansson (Sci)
+ - Joshua Seagoe (RabidCow)
+ - Kevin Schaffer (Maduin)
+ - Simon (ilmcuts)
+
+ LiteStep 0.24.7
+ ---------------
+ - Bobby G Vineyard (Message)
+ - Chris Rempel (jugg)
+ - Simon (ilmcuts)
 
  Previous Developers
  -------------------
@@ -210,7 +357,7 @@ Contents:
    Brandon S. (nivenh)
    demigod
 
- And thanks to all of those who have contributed to Litestep and its community
+ And thanks to all of those who have contributed to LiteStep and its community
  over the last 8 years!  It is much appreciated by everyone.
 
 -- HISTORY ---------------------------------------------------------------------
@@ -218,14 +365,14 @@ Contents:
 In December of 1997 Francis Gastellu released the first private build (v1.0 ß1)
 of what was originally named SimpleStep, a shell replacement for Windows95.
 Over the next month several more builds were released, and the project was
-renamed to LiteSTEP, and described as "[LiteSTEP] ... will give your windows the
+renamed to LiteSTEP, and described as LiteSTEP "will give your windows the
 AfterSTEP look&feel."
 
 Between 12/14/97 and 05/06/98, Francis released >23 Beta builds of LiteSTEP v1.0
 with the final release of LiteSTEP 1.0 ß23d on 05/06/98.  He subsequently opened
-the source code under the GNU GPL (General Public License) and handed the
-development over to Brandon Williams (Floach) and what became the Litestep
-Development Team.
+the Borland C Builder 1.0 source code under the GNU GPL (General Public License)
+and handed the development over to Brandon Williams (Floach) and what became the
+Litestep Development Team.
 
 And while the source was released under the GPL, it came with the following text
 stipulating his desires to see LiteSTEP development continue fork free:
@@ -243,13 +390,15 @@ On 07/20/98 the new Litestep Development Team released their first build of
 LiteSTEP v1.0 ß23e with the help of Francis.
 
 On 10/27/98 the Litestep Development Team released "LiteStep Version 0.24.0"
-based on their updated source tree supporting modular add-ons.  The release
-included a complete installer with a packaged theme.  Fahim then joined the
-team and they released three "upgrade" builds:
+based on their source tree re-written in plain C using Visual Studio 5 & 6. The
+new source supported modular add-ons allowing 3rd party developers to contribute
+to LiteStep's features.  The release included a complete installer with a
+packaged theme.  Fahim then joined the team and they released three "upgrade"
+builds:
 
-0.24.2 (1998-10-30)
-0.24.3 (1998-11-06)
-0.24.4 (1998-11-28)
+0.24.2 (10-30-98)
+0.24.3 (11-06-98)
+0.24.4 (11-28-98)
 
 At this point it was decided the code needed to be cleaned up significantly
 and several new developers were brought on from the module developer community
@@ -263,7 +412,7 @@ taken in new directions, jugg, Ender and Visigoth decided to leave the team as
 well.  The last stable release built off of the 0.24.5 code base was dubbed the
 "1999-11-23" build.
 
-Under the guide of Headius, Litestep progressed as a C++/COM implementation
+Under the guide of Headius, LiteStep progressed as a C++/COM implementation
 and found many new features and improvements for themers.  Over the following
 year until early 2001, the team released many intermediate builds on their goal
 for a stable 0.24.6 release.  Unfortunately because of a decision to proceed
@@ -276,23 +425,22 @@ In response to this situation, a group of independant developers formed what
 they named "IndieStep" to continue the 0.24.6 code base while they waited for
 the formal 0.25.0 development to finalize.  Again unfortunately the development
 of 0.25.0 was abandoned due to varying circumstances, and the majority of the
-then current development team quit, leaving Litestep dead in the water accept
+then current development team quit, leaving LiteStep dead in the water accept
 for the continuing IndieStep development.
 
-At this point, Message stepped up to the plate and took lead of the Litestep
-Development Team, and announced work on Litestep 0.24.7 which would return
-the Litestep code base back to stream-lined C++ implementation without COM.  So,
-again over the following year as Message cleaned up the source code and fixed
-numerous issues, IndieStep continued development waiting for a 0.24.7 release.
+At this point the Litestep Development Team lead was given to Message, and he
+announced work on LiteStep 0.24.7 which would return the LiteStep code base back
+to stream-lined C++ implementation without COM.  So, again over the following
+year as Message cleaned up the source code and fixed numerous issues, IndieStep
+continued development waiting for a 0.24.7 release.
 
 However, Message was deployed to Iraq, and was unable to continue his work on
-0.24.7.  Ilmcuts from the IndieStep effort was able to take over, and released
-the first beta build of 0.24.7 on March 13, 2003.  By May 21, 2004, he had the
-third release candidate of 0.24.7 ready.
+0.24.7.  So, The Litestep Development Team's lead once more changed, and Message
+gave it to Ilmcuts from the IndieStep effort.  Ilmcuts quickly progressed the
+code base and released the first beta build of 0.24.7 on March 13, 2003.  By
+May 21, 2004, he had the third release candidate of 0.24.7 ready.
 
-Since then, nothing has happened until _now_.
-
-Now the Litestep Development Team proudly presents "Litestep 0.24.7" on the 8th
+Now the Litestep Development Team proudly presents "LiteStep 0.24.7" on the 8th
 anniversary of this shell that will forever change the way you interact with
 your Windows desktop.
 
